fix col gutter spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@ a {
 }
 
 .row [class^='col'] {
-  margin: 0;
+  margin: 0 var(--spacing-600) 0 0;
 }
 
 @media only screen and (min-width: 33.75em) {
